objects/Case.object
<CustomObject>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bespoke tools</fullName>
                </value>
                <value>
                    <fullName>General SHL</fullName>
                </value>
                <value>
                    <fullName>Job-Focused Assessments</fullName>
                </value>
                <value>
                    <fullName>Other Product – 360</fullName>
                </value>
                <value>
                    <fullName>Other Product – Ability Other</fullName>
                </value>
                <value>
                    <fullName>Other Product – Assessment Centre Exercises</fullName>
                </value>
                <value>
                    <fullName>Other Product – DSI</fullName>
                </value>
                <value>
                    <fullName>Other Product – MQ</fullName>
                </value>
                <value>
                    <fullName>Other Product – Personality Other</fullName>
                </value>
                <value>
                    <fullName>Other Product – Talent Analytics</fullName>
                </value>
                <value>
                    <fullName>Other Product – UCF &amp; APTA</fullName>
                </value>
                <value>
                    <fullName>Personality - OPQ</fullName>
                </value>
                <value>
                    <fullName>Platform &amp; Technologies</fullName>
                </value>
                <value>
                    <fullName>Product Combination</fullName>
                </value>
                <value>
                    <fullName>RemoteWorkQ</fullName>
                </value>
                <value>
                    <fullName>Simulations - CCVS, Teller, Office Sims</fullName>
                </value>
                <value>
                    <fullName>Skills Tests - Adaptive. IT, Software</fullName>
                </value>
                <value>
                    <fullName>Skills tests – AM Coding</fullName>
                </value>
                <value>
                    <fullName>Skills tests – AM general</fullName>
                </value>
                <value>
                    <fullName>Skills tests – AM Language</fullName>
                </value>
                <value>
                    <fullName>Skills Tests - Clerical, Essential</fullName>
                </value>
                <value>
                    <fullName>Solution Groups and Packaged Offerings</fullName>
                </value>
                <value>
                    <fullName>Verify Portfolio – General</fullName>
                </value>
                <value>
                    <fullName>Verify Portfolio – Verify G+</fullName>
                </value>
                <value>
                    <fullName>Verify Portfolio – Verify Interactive</fullName>
                </value>
                <value>
                    <fullName>Virtual Solutions - Interview Tools</fullName>
                </value>
                <value>
                    <fullName>Virtual Solutions – VADC</fullName>
                </value>
                <value>
                    <fullName>Other Product – Other</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Proctoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 6) OR (3 AND 4 AND 6) OR (5 AND 7)</booleanFilter>
            <filterItems>
                <field>ProjectObject__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <filterItems>
                <field>ProjectObject__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Project</value>
            </filterItems>
            <filterItems>
                <field>ProjectObject__c.PS_Project_Number__r.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <filterItems>
                <field>ProjectObject__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>CPS_Project</value>
            </filterItems>
            <filterItems>
                <field>$Source.Opportunity__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.Opportunity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ProjectObject__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Days__c</fullName>
        <label>QA Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_Type__c</fullName>
        <label>Ref Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>ORD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_if_internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester if Internal</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Country__c</fullName>
        <label>Requestor Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium SPS - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France SPS - FR5</fullName>
                </value>
                <value>
                    <fullName>Germany SPS - DE5</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands SPS - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Applicant Reaction Survey</fullName>
                </value>
                <value>
                    <fullName>APTA</fullName>
                </value>
                <value>
                    <fullName>Assessment Customisation/ Tailoring</fullName>
                </value>
                <value>
                    <fullName>Authoring</fullName>
                </value>
                <value>
                    <fullName>Behavioural and Personality Assessments</fullName>
                </value>
                <value>
                    <fullName>BOS</fullName>
                </value>
                <value>
                    <fullName>BOS / Validation</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Business Simulation</fullName>
                </value>
                <value>
                    <fullName>Client Demos</fullName>
                </value>
                <value>
                    <fullName>Client sale inquiries</fullName>
                </value>
                <value>
                    <fullName>Cognitive Assessments</fullName>
                </value>
                <value>
                    <fullName>Configurable Grad SJT</fullName>
                </value>
                <value>
                    <fullName>Contact Centre simulation</fullName>
                </value>
                <value>
                    <fullName>Custom assessment</fullName>
                    <label>Custom Assessment</label>
                </value>
                <value>
                    <fullName>Custom Instrument - S2P</fullName>
                </value>
                <value>
                    <fullName>Custom Instrument - SODA</fullName>
                </value>
                <value>
                    <fullName>Custom Norm</fullName>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                </value>
                <value>
                    <fullName>Custom Report - Complex</fullName>
                </value>
                <value>
                    <fullName>Custom Report - CRD</fullName>
                </value>
                <value>
                    <fullName>Custom Report - Option 1</fullName>
                </value>
                <value>
                    <fullName>Custom Report - Option 2</fullName>
                </value>
                <value>
                    <fullName>Custom Report - Option 3</fullName>
                </value>
                <value>
                    <fullName>Custom report tool</fullName>
                </value>
                <value>
                    <fullName>Custom Scale</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Data Extract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Problem2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party - Caller to Contact Hiring Company</fullName>
                </value>
                <value>
                    <fullName>3rd Party - Made Aware</fullName>
                </value>
                <value>
                    <fullName>Account Manager/CX Referral</fullName>
                </value>
                <value>
                    <fullName>Advanced User - Provided Question-Specific Training</fullName>
                </value>
                <value>
                    <fullName>Already Registered</fullName>
                </value>
                <value>
                    <fullName>Assessment Closed unexpectedly</fullName>
                </value>
                <value>
                    <fullName>Brainbench Question</fullName>
                </value>
                <value>
                    <fullName>Camera / Microphone</fullName>
                </value>
                <value>
                    <fullName>Client Site Deactivated</fullName>
                </value>
                <value>
                    <fullName>Cooling Period Question</fullName>
                </value>
                <value>
                    <fullName>CSIT - Referred</fullName>
                </value>
                <value>
                    <fullName>Data Deletion</fullName>
                </value>
                <value>
                    <fullName>Deadline Question</fullName>
                </value>
                <value>
                    <fullName>Disability Question</fullName>
                </value>
                <value>
                    <fullName>Extended User Training Required - Referred to Client System Training</fullName>
                </value>
                <value>
                    <fullName>Extend session/timer or expiration date question</fullName>
                </value>
                <value>
                    <fullName>Extension Request</fullName>
                </value>
                <value>
                    <fullName>Firewall / Security Software</fullName>
                </value>
                <value>
                    <fullName>First Time User - Provided Basic Training</fullName>
                </value>
                <value>
                    <fullName>Flash / Java</fullName>
                </value>
                <value>
                    <fullName>Forgotten Username/Password  - Password Reset</fullName>
                </value>
                <value>
                    <fullName>GDPR/Legal Information Request</fullName>
                </value>
                <value>
                    <fullName>General opening hours and support query</fullName>
                </value>
                <value>
                    <fullName>Hiring Company - Referred</fullName>
                </value>
                <value>
                    <fullName>Incompatible/Alternative Browser/Other Browser Settings</fullName>
                </value>
                <value>
                    <fullName>Incorrect Setup - Informed Integration Implementation Team</fullName>
                </value>
                <value>
                    <fullName>Indeed App Issue - Sent Link</fullName>
                </value>
                <value>
                    <fullName>Interface Functionality/Display Problems</fullName>
                </value>
                <value>
                    <fullName>Internet Connectivity</fullName>
                </value>
                <value>
                    <fullName>Interviewer Not Joined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_From__c</fullName>
        <description>Only Applicable for Japan Web cases to determine the submission from which webiste so that cna be routed to correct teams. If from Main website then goes to NVM routing else will be managed within Salesforce via Japan Mailbox.</description>
        <inlineHelpText>To determine the web case submitted from which web page Main or Japan.</inlineHelpText>
        <label>Submitted From?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main website</fullName>
                </value>
                <value>
                    <fullName>Japan website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sun_Reference_No__c</fullName>
        <label>Sun Reference No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Id__c</fullName>
        <label>System ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Ref</label>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iAssess/Amcatglobal</fullName>
                </value>
                <value>
                    <fullName>aspiringminds.com/AMCAT</fullName>
                </value>
                <value>
                    <fullName>iAssess</fullName>
                </value>
                <value>
                    <fullName>TalentCentral+</fullName>
                </value>
                <value>
                    <fullName>TalentCentral</fullName>
                </value>
                <value>
                    <fullName>iAssess/AMCAT</fullName>
                </value>
                <value>
                    <fullName>Brainbench</fullName>
                </value>
                <value>
                    <fullName>CEB Membership Site</fullName>
                </value>
                <value>
                    <fullName>ClearForce</fullName>
                </value>
                <value>
                    <fullName>CS (Sales) Demo Site</fullName>
                </value>
                <value>
                    <fullName>Customer Career Site</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>E-learning</fullName>
                </value>
                <value>
                    <fullName>IBM on AM</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>Interview Guide Builder</fullName>
                </value>
                <value>
                    <fullName>Leader Edge</fullName>
                </value>
                <value>
                    <fullName>Legacy System</fullName>
                </value>
                <value>
                    <fullName>Metrics that Matter (MTM)</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
                <value>
                    <fullName>Mobile Cognitive</fullName>
                </value>
                <value>
                    <fullName>MS Teams App</fullName>
                </value>
                <value>
                    <fullName>NVM/Phone</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Practice site</fullName>
                </value>
                <value>
                    <fullName>S2P</fullName>
                </value>
                <value>
                    <fullName>S2P CI</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>SHL App</fullName>
                </value>
                <value>
                    <fullName>SHL Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Days__c</fullName>
        <label>Tech Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <description>Time Spent on Case in Minutes</description>
        <label>Time Spent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_platform_are_you_using__c</fullName>
        <label>What platform are you using?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brainbench</fullName>
                </value>
                <value>
                    <fullName>iAssess/AMCAT</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>Leader Edge</fullName>
                </value>
                <value>
                    <fullName>Multirater Feedback System (MFS)</fullName>
                </value>
                <value>
                    <fullName>Other, please specify</fullName>
                </value>
                <value>
                    <fullName>Select2Perform (S2P)</fullName>
                </value>
                <value>
                    <fullName>SelectionSage</fullName>
                </value>
                <value>
                    <fullName>SHL On Demand (SODA)</fullName>
                </value>
                <value>
                    <fullName>SHLOnline</fullName>
                </value>
                <value>
                    <fullName>Sunstone Analytics</fullName>
                </value>
                <value>
                    <fullName>TalentCentral™</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Postal__c</fullName>
        <label>Zip/Postal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>